--- a/app/linux/cross_shader/CMakeLists.txt
+++ b/app/linux/cross_shader/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 2.8)
+SET(CMAKE_CXX_FLAGS "-std=c++0x")
+cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fpermissive")
 file(GLOB ALL_SRC
 	"*.h"
 	"*.cpp"
